# baeksungbus

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  connection_test.py  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
auth/: authenticate.py  hash_password.py  jwt_handler.py
database/: connection.py
k8s/: README.md  configmap.yaml  deploy.yaml  ingress.yaml  kustomization.yaml  mysql.yaml  secret.example.yaml
migrations/: env.py
migrations/versions/: 20260619_0001_initial_tables.py  20260622_0002_expand_large_content_columns.py  20260622_0003_expand_user_text_columns.py
models/: __init__.py  answers.py  bus_schedule.py  customer_qa.py  customer_qas.py  ddock.py  notice.py  qa.py  recruit.py  users.py
routes/: answers.py  bus_schedules.py  captcha_route.py  customer_qas.py  ddocks.py  events.py  notices.py  pages.py  qas.py  recruits.py  users.py
static/: robots.txt  sitemap.xml
static/css/: sidebars.css
static/js/: admin.js  auth.js  checkout.js  ddock.js  editor.js  form.js  index-lost.js  index-notice.js  login.js  logout.js  notice-detail.js  notice.js  qa-detail.js  qa-update.js  qas.js  schedule-detail.js  schedule.js  submitQa.js
templates/: admin.html  answer_form.html  ddock.html  index.html  index2.html  location.html  login.html  lost-form.html  lost.html  notice-detail.html  notice.html  qa-detail.html  qa-form.html  qa-update.html  qa.html  qa_form.html  recruit.html  schedule-detail.html  schedule.html
utils/: email.py  settings.py
(+17 files in other folders)
