[project]
name = "baeksungbus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "bcrypt==4.2.0",
    "beanie==1.27.0",
    "captcha==0.6.0",
    "cffi==1.17.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "cryptography==43.0.3",
    "dnspython==2.7.0",
    "ecdsa==0.19.0",
    "email-validator==2.2.0",
    "fastapi==0.115.2",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "lazy-model==0.2.0",
    "markupsafe==3.0.2",
    "motor==3.6.0",
    "mysql-connector-python==9.1.0",
    "passlib==1.7.4",
    "pillow==11.0.0",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.6.0",
    "pymongo==4.9.2",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.12",
    "pytz==2024.2",
    "rsa==4.9",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "sqlmodel==0.0.22",
    "starlette==0.40.0",
    "toml==0.10.2",
    "typing-extensions==4.12.2",
    "uvicorn==0.32.0",
]
